--- a/Week_2.ipynb
+++ b/Week_2.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c164d5f2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "def great():\n",
+    "    print(\"hello\")\n",
+    "\n",
+    "# ফাংশন কল করা\n",
+    "great()\n"
+   ]
   }
  ],
  "metadata": {
